<resources>
    <string name="app_name">Quarter</string>
    <string name="login_visitor">游客登录</string>
    <string name="login_other">其他登录方式</string>
    <string name="login_btn">登录</string>
    <string name="regist_btn">注册</string>
    <string name="complete">完成</string>
    <string name="regist_account">注册账号</string>
    <string name="pass_option">密码不能超过8位</string>
    <string name="pass">密码</string>
    <string name="forget_pass">忘记密码</string>
    <string name="account">账号</string>
    <string name="phone_option">请输入手机号</string>
    <string name="has_option">已有账号?</string>
    <string name="to_somebody">"@Ta"</string>
    <string name="write_joke_hint">请输入内容，禁止输入色情、暴力等违反国家法律的内容，违者将以封号处理！</string>
</resources>
