<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.erzu.quarter.view.activity.FindPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/alert_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/back"/>

        <TextView
            android:id="@+id/has_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/has_option"
            android:textSize="20sp"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@mipmap/raw_1500977101"/>

    <EditText
        android:id="@+id/alter_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/edit_bg"
        android:ems="10"
        android:hint="@string/phone_option"/>

    <EditText
        android:id="@+id/alter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alter_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:background="@drawable/edit_bg"
        android:ems="10"
        android:hint="@string/pass_option"/>

    <Button
        android:id="@+id/alter_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:background="@drawable/button_select"
        android:text="@string/complete"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/visitor_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginBottom="61dp"
        android:text="@string/login_visitor"
        android:textSize="20sp"/>
</RelativeLayout>
